--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="Content-Type" name="viewport" content="width=device-width,user-scalable=yes, initial-scale=0.1,maximum-scalable=3.0,minimum-scalable=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/v4-shims.css">
-    <link rel="stylesheet" href="{% static 'styles/style.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'styles/pop.css' %}" type="text/css"> 
-    <link rel="Stylesheet" type="text/css" href="{% static 'styles/home.css' %}"> 
+    <link rel="stylesheet" href="static/styles/style.css" type="text/css">
+    <link rel="stylesheet" href="static/styles/pop.css" type="text/css"> 
+    <link rel="Stylesheet" type="text/css" href="static/styles/home.css"> 
     <title>home</title>
 </head>
 
@@ -23,14 +23,14 @@
                         <div class="">0</div>
                     </li>
                     <li class="contet_user">
-                        <a href="{% url 'usuario' %}"></a><i class="fas fa-user-circle icon_responsive "></i></a>
+                        <a href="usuario.html"></a><i class="fas fa-user-circle icon_responsive "></i></a>
                     </li>
-                    <li class="content_logo"><img src="{% static 'img/iconos/logo_box_header.svg' %} " alt="Logo " class="Logo"></li>
+                    <li class="content_logo"><img src="static/img/iconos/logo_box_header.svg" alt="Logo " class="Logo"></li>
                     <li class="menu_nav"><i class="fas fa-bars icon_responsive "></i></li>
                 </ul>
                 <ul class="menu_submenu">
                     <li class="">
-                        <a href="{% url 'casa' %} " class="text_title-header" id="inicio ">Inicio</a>
+                        <a href="index.html" class="text_title-header" id="inicio ">Inicio</a>
                     </li>
                     <li class="items_principals">
                         <p class="text_title-header " id="0" value="1">Categorias</p>
@@ -66,8 +66,8 @@
         <div class="slider_row">
             <div class="Slider">
                 <section class="carrucel_items">
-                    <img src="{% static 'img/portadas/La_villana.jpg'%}" alt="" class="caratula">
-                    <img src="{% static 'img/fondos/gif/moto.gif' %}" alt="" class="item" id="item_1" title="VER MAS">
+                    <img src="static/img/portadas/La_villana.jpg" alt="" class="caratula">
+                    <img src="static/img/fondos/gif/moto.gif" alt="" class="item" id="item_1" title="VER MAS">
 
                     <article class="descripcion" id="descripcion_1">
                         <h2 class="titulo_c">LA VILLANA</h2>
@@ -78,8 +78,8 @@
 
                 </section>
                 <section class="carrucel_items">
-                    <img src="{% static 'img/portadas/Raid.jpg'%}" alt="" class="refer_image caratula" id="caratula_1">
-                    <img src="{% static 'img/fondos/gif/lucha.gif'%}" alt="" class="item" id="item_2">
+                    <img src="static/img/portadas/Raid.jpg" alt="" class="refer_image caratula" id="caratula_1">
+                    <img src="static/img/fondos/gif/lucha.gif" alt="" class="item" id="item_2">
 
                     <article class="descripcion" id="descripcion_1">
                         <h2 class="titulo_c">REDADA ASESINA</h2>
@@ -90,8 +90,8 @@
 
                 </section>
                 <section class="carrucel_items">
-                    <img src="{% static 'img/portadas/Redada_asesina_2.jpg'%}" alt="" class=" refer_image caratula" id="caratula_1">
-                    <img src="{% static 'img/fondos/gif/m.gif' %}" alt="" class="item" id="item_3">
+                    <img src="static/img/portadas/Redada_asesina_2.jpg" alt="" class=" refer_image caratula" id="caratula_1">
+                    <img src="static/img/fondos/gif/m.gif" alt="" class="item" id="item_3">
                     <article class="descripcion" id="descripcion_1">
                         <h2 class="titulo_c">REDADA ASESINA 02</h2>
                         <h6> Acción ♠ 150 min ♠ 2014 ♠ Indonesia</h6>
@@ -145,7 +145,7 @@
         <h2 class="subtitulo">En cartelera: </h2>
         <div class="row_cartelera">
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/Colonia_V.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/Colonia_V.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/Border.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/Border.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -174,7 +174,7 @@
 
             </div>
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/j_w.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/j_w.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -188,7 +188,7 @@
 
             </div>
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/parasitos.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/parasitos.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/Mortal.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/Mortal.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/Archive.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/Archive.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -224,7 +224,7 @@
                 </div>
             </div>
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/En_la_niebla.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/En_la_niebla.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -236,7 +236,7 @@
                 </div>
             </div>
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/Asura.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/Asura.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -247,7 +247,7 @@
                 </div>
             </div>
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/Tenet.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/Tenet.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -258,7 +258,7 @@
                 </div>
             </div>
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/historias-de-miedo.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/historias-de-miedo.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -269,7 +269,7 @@
                 </div>
             </div>
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/logan.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/logan.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -281,7 +281,7 @@
                 </div>
             </div>
             <div class="seccion_t">
-                <img class="item_x" src="{% static 'img/portadas/Vivo.jpg'%}" alt="Portada">
+                <img class="item_x" src="static/img/portadas/Vivo.jpg" alt="Portada">
                 <div class="costo">
                     <p>Costo: S/ 00.00</p>
                 </div>
@@ -300,21 +300,21 @@
         <h2 class="subtitulo">Proximos:</h2>
         <div class="content_p">
             <div class="seccion_p">
-                <img src="{% static 'img/portadas/Looper.jpg'%}" alt="Portada" class="item_x">
+                <img src="static/img/portadas/Looper.jpg" alt="Portada" class="item_x">
                 <div class="costo">
                     <p>Costo: S/0.00</p>
                 </div>
             </div>
             <div class="seccion_p">
                 <a href="{% url 'info_pelicula' %}">
-                    <img src="{% static 'img/portadas/26-years.jpg'%}" alt="Portada" class="item_x" id="hola">
+                    <img src="static/img/portadas/26-years.jpg" alt="Portada" class="item_x" id="hola">
                 </a>
                 <div class="costo">
                     <p>Costo: S/0.00</p>
                 </div>
             </div>
             <div class="seccion_p">
-                <img src="{% static 'img/portadas/cEc.jpg'%}" alt="Portada" class="item_x">
+                <img src="static/img/portadas/cEc.jpg" alt="Portada" class="item_x">
                 <div class="costo">
                     <p>Costo: S/0.00</p>
                 </div>
@@ -472,10 +472,10 @@
             <h6 class="text_subtitle-footer">Tel:01-999-999-99</h6>
             <h6 class="text_subtitle-footer">cel: 999-999-99</h6>
 
-            <a href="https://www.facebook.com/ "><img src="{% static 'img/iconos/facebook.png'%} " alt="f " class="img_responsive-social "></a>
-            <a href="https://www.twitter.com/ "><img src="{% static 'img/iconos/twitter.png'%} " alt="t " class="img_responsive-social "></a>
-            <a href="https://www.whatsapp.com/ "><img src="{% static 'img/iconos/whatsapp.png'%} " alt="w " class="img_responsive-social "></a>
-            <a href="https://www.google.com/ "><img src="{% static 'img/iconos/google.png'%} " alt="g " class="img_responsive-social "></a>
+            <a href="https://www.facebook.com/ "><img src="static/img/iconos/facebook.png" alt="f " class="img_responsive-social "></a>
+            <a href="https://www.twitter.com/ "><img src="static/img/iconos/twitter.png" alt="t " class="img_responsive-social "></a>
+            <a href="https://www.whatsapp.com/ "><img src="static/img/iconos/whatsapp.png" alt="w " class="img_responsive-social "></a>
+            <a href="https://www.google.com/ "><img src="static/img/iconos/google.png" alt="g " class="img_responsive-social "></a>
 
         </div>
 
@@ -489,13 +489,13 @@
             <h2 class="text_title-footer">OTROS SERVICIOS:</h2>
             <button class="btn_none-texto btn-secc" value="4">Trabaja con nosotros</button>
             <br>
-            <img src="{% static 'img/iconos/logo_box_header.svg' %} " alt="LOGO " class="Logo-footer ">
+            <img src="static/img/iconos/logo_box_header.svg" alt="LOGO " class="Logo-footer ">
         </div>
     </footer>
 
     <!-- Fin de pie de pagina-->
-    <script src="{% static 'script/script.js'%} "></script>
-   <script src="{% static 'script/home.js' %}"></script>
+    <script src="static/script/script.js"></script>
+   <script src="static/script/home.js"></script>
 </body>
 
 </html>
