--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="Content-Type" name="viewport" content="width=device-width,user-scalable=yes, initial-scale=0.1,maximum-scalable=3.0,minimum-scalable=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/v4-shims.css">
-    <link rel="stylesheet" href="static/styles/style.css" type="text/css">
-    <link rel="stylesheet" href="static/styles/pop.css" type="text/css"> 
-    <link rel="Stylesheet" type="text/css" href="static/styles/home.css"> 
+    <link rel="stylesheet" href="/static/styles/style.css" type="text/css">
+    <link rel="stylesheet" href="/static/styles/pop.css" type="text/css"> 
+    <link rel="Stylesheet" type="text/css" href="/static/styles/home.css"> 
     <title>home</title>
 </head>
 
