--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Type" name="viewport" content="width=device-width,user-scalable=yes, initial-scale=0.1,maximum-scalable=3.0,minimum-scalable=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/v4-shims.css">
     <link rel="stylesheet" href="./static/styles/style.css" type="text/css">
