--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="index.html" class="text_title-header" id="inicio ">Inicio</a>
                     </li>
                     <li class="items_principals">
-                        <p class="text_title-header " id="0" value="1">Categorias</p>
+                        <button class="text_title-header btn_none-text" id="" value="0">Categorias</button>
                         <ul class="menu_submenu-items" id="sub_cat">
                             <li class="items"><a class="">Accion</a></li>
                             <li class="items"><a class="">Comedia</a></li>
@@ -48,7 +48,7 @@
                         </ul>
                     </li>
                     <li class="items_principals">
-                        <p class="text_title-header" id="1" value="2">Servicios</p>
+                        <button class="text_title-header btn_none-text" id="" value="1">Servicios</button>
                         <ul class="menu_submenu-items" id="">
                             <li class="items"><a class="">Promociones</a></li>
                             <li class="items"><a class="">Atencion al cliente</a></li>
