--- a/info.html
+++ b/info.html
@@ -136,7 +136,7 @@
 </div>
 <div class="content_informacion ">
     <button class="informacion-btn_tra btn_activado" value="1">Trailer:</button>
-    <button class="informacion-tra" value="2">Valoracion:</button>
+    <button class="informacion-btn_tra" value="2">Valoracion:</button>
 
     <div class="informacion-trailler">
         <iframe class="triller " src="https://www.youtube.com/embed/vcVce8AqgCY " title="26 Years " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
