--- a/info.html
+++ b/info.html
@@ -23,7 +23,7 @@
                         <div class="">0</div>
                     </li>
                     <li class="contet_user">
-                        <a href="usuario.html"></a><i class="fas fa-user-circle icon_responsive "></i></a>
+                        <a href="usuario.html"><i class="fas fa-user-circle icon_responsive "></i></a>
                     </li>
                     <li class="content_logo"><img src="static/img/iconos/logo_box_header.svg" alt="Logo " class="Logo"></li>
                     <li class="menu_nav"><i class="fas fa-bars icon_responsive "></i></li>
